force-app/main/default/objects/cgcloud__Job_Definition_List_Product__c/cgcloud__Job_Definition_List_Product__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between job definition list and product.</description>
    <label>Activity Product</label>
    <nameField>
        <displayFormat>JDLP-{0000}</displayFormat>
        <label>Activity Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>