force-app/main/default/objects/cgcloud__Job_Definition_List_Product__c/fields/cgcloud__Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Composite_Key__c</fullName>
    <description>Contains concationation of the related records Job definition List and Product. The field is set by workflow. This helps to avoid that a Product can be added twice to a Job Definition List.</description>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>