force-app/main/default/objects/cgcloud__Job_Definition_List_Product__c/fields/cgcloud__Excluded__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluded</label>
    <type>Checkbox</type>
</CustomField>