force-app/main/default/objects/cgcloud__Job_Definition_List_Product__c/fields/cgcloud__Job_Definition_List__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_List__c</fullName>
    <label>Activity</label>
    <referenceTo>cgcloud__Job_Definition_List__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Job_Definition_List_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>