force-app/main/default/objects/cgcloud__Job_Definition_List_Product__c/fields/cgcloud__Manually__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manually__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Added products will be marked as Manually ‘True’
Products added via FSA having Manually ‘False’</description>
    <label>Manually</label>
    <type>Checkbox</type>
</CustomField>