force-app/main/default/objects/cgcloud__Job_Definition_List_Product__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>Product2.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activity Products</relationshipLabel>
    <relationshipName>Job_Definition_List_Products</relationshipName>
    <type>Lookup</type>
</CustomField>