force-app/main/default/objects/cgcloud__Job_Definition_List_Product__c/fields/cgcloud__Product_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Description__c</fullName>
    <formula>cgcloud__Product__r.cgcloud__Description_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>