force-app/main/default/objects/cgcloud__Job_Definition_List_Product__c/fields/cgcloud__Product_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Number__c</fullName>
    <formula>cgcloud__Product__r.cgcloud__Consumer_Goods_Product_Code__c</formula>
    <label>Product Number</label>
    <type>Text</type>
</CustomField>