force-app/main/default/objects/cgcloud__Job_Definition_List_Product__c/validationRules/cgcloud__Sales_Org_should_be_same_for_all_lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_all_lookups</fullName>
    <active>true</active>
    <description>The Activity Product, Activity and Product must belong to the same Sales Org.</description>
    <errorConditionFormula>OR (( cgcloud__Product__r.cgcloud__Sales_Org__c ) &lt;&gt; TEXT( cgcloud__Job_Definition_List__r.cgcloud__Sales_Org__c ),
TEXT( cgcloud__Sales_Org__c ) &lt;&gt; ( cgcloud__Product__r.cgcloud__Sales_Org__c ))</errorConditionFormula>
    <errorMessage>The Activity Product, Activity and Product must have the same Sales Org.</errorMessage>
</ValidationRule>